--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,5 +13,6 @@
         <ion-icon name="checkbox-outline"></ion-icon>
       </div>
     </ion-item>
+    <div>dev에서 바꿈</div>
   </ion-list>
 </ion-content>
